# Distilled_qwen3_moe_crop_advisory_hi

./: README.md  agri_data.py  eval_benchmark.py  launch_train.sh  next.md  next.txt  plot_losses.py  plot_results.py  plot_specialization.py  pyproject.toml  requirements.py  requirements.txt  run_distill.slurm  test_inference.py  text.txt  todo.txt  train_distill.py
data_prep/: build_mixed_dataset.py
docs/: _problem.md
evaluation/: eval_benchmark.py  evaluate_models.py  generate_eval_dataset.py  plot_results.py  plot_specialization.py
inference/: test_inference.py
litgpt/: config.py  model.py  tokenizer.py
runners/: run_distill.slurm
scripts/: check_weights.py  convert_hf_checkpoint.py  count_save_token_raw.py  download.py  sanity_check_data.py  upcycle_moe.py
