[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litgpt"
version = "0.1.0"
dependencies = [
    "torch",
    "typing_extensions",
    "pyyaml",
]
[tool.setuptools.packages.find]
include = ["litgpt*"]  # Only include folders starting with litgpt
exclude = ["checkpoints*", "data*", "scripts*"]  # Ignore these folders